crates/nash-report/src/type_/snapshots/nash_report__type___tests__destructure_mismatch.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue =\n    let\n        (first, second) = \"hello\"\n    in\n    first\n"
---
nash::type::mismatch

  × Type mismatch: expected `( Primitive.int, Primitive.int )`,
  │ found `Primitive.string`.
   ╭─[Main.nash:4:27]
 3 │     let
 4 │         (first, second) = "hello"
   ·                           ───┬───
   ·                              ╰── destructuring pattern
 5 │     in
   ╰────
