crates/nash-report/src/type_/snapshots/nash_report__type___tests__every_category.snap
---
source: crates/nash-report/src/type_/tests.rs
---
list
string
if expression
case expression
result of `f`
result of `Box`
result of (+)
result of this function
function
accessor `.field`
field `field`
record
tuple
unit
`local`
`foreign`
