crates/nash-report/src/type_/snapshots/nash_report__type___tests__every_pattern_category.snap
---
source: crates/nash-report/src/type_/tests.rs
expression: "categories.into_iter().map(|category|\npattern_label(category)).collect::<Vec<_>>().join(\"\\n\")"
---
record pattern
unit pattern
tuple pattern
list pattern
`Box` pattern
integer pattern
bytes pattern
string pattern
boolean pattern
