crates/nash-report/src/type_/snapshots/nash_report__type___tests__example_one_big_little_annotation.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Ledger exposing (settle)\n\ntype alias Account = { owner : Bytes, balance : Int }\n\nbalanceOf : Account -> Int\nbalanceOf account = account.balance\n\nsettle : list Account -> list int\nsettle accounts =\n    List.map balanceOf accounts\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.list Primitive.int`,
  │ found `Primitive.list Primitive.Int`.
    ╭─[src/Ledger.nash:10:5]
  7 │ 
  8 │ settle : list Account -> list int
    ·          ────────────┬───────────
    ·                      ╰── declared type
  9 │ settle accounts =
 10 │     List.map balanceOf accounts
    ·     ─────────────┬─────────────
    ·                  ╰── body of `settle`
    ╰────
  help: Use `lower` to convert `Int` to `int` where a `Lift` impl is available.
