crates/nash-report/src/type_/snapshots/nash_report__type___tests__field_mismatch_update.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nperson = { age = 1 }\nvalue = { person | age = \"hello\" }\n"
---
nash::type::field_mismatch

  × Type mismatch: expected `Primitive.string`, found `Primitive.int`.
   ╭─[Main.nash:3:26]
 2 │ person = { age = 1 }
 3 │ value = { person | age = "hello" }
   ·                          ───┬───
   ·                             ╰── field `age` update of `person`
   ╰────
  help: Rebuild the record to change a field's type.
