crates/nash-report/src/type_/snapshots/nash_report__type___tests__hint_arity_fewer.snap
---
source: crates/nash-report/src/type_/tests.rs
expression: "Doc::stack(problem_to_hint(&problem)).render(80, false)"
---
Check the function's argument count: expected 3, found 1.
