crates/nash-report/src/type_/snapshots/nash_report__type___tests__hint_arity_more.snap
---
source: crates/nash-report/src/type_/tests.rs
---
Check the function's argument count: expected 1, found 3.
