crates/nash-report/src/type_/snapshots/nash_report__type___tests__hint_double_rigid.snap
---
source: crates/nash-report/src/type_/tests.rs
expression: "Doc::stack(problem_to_hint(&problem)).render(80, false)"
---
Hint: Your type annotation uses `'a` and `'b` as separate type variables. Your
code seems to be saying they are the same though. Maybe they should be the same
in your type annotation? Maybe your code uses them in a weird way?

Read <https://nash-script.dev/hints/type-annotations> for more advice!
